[tool.poetry]
name = "fanbox-dl"
version = "1.1.0"
description = "A Fanbox downloader."
authors = ["Jeremias Pettinen <hi@jeremi.as>"]
license = "ISC"
readme = "README.md"
repository = "https://github.com/pettinen/fanbox-dl"

[tool.poetry.dependencies]
click = "^8.0.1"
python = "^3.8"
requests = "^2.25.1"

[tool.poetry.scripts]
fanbox-dl = "fanbox_dl:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
