[metadata]
name = fanbox-dl
version = 0.2.0
description = A Fanbox downloader.
author = Jeremias Pettinen
author_email = hi@jeremi.as
license = MIT
license_file = LICENSE
url = https://github.com/pettinen/fanbox-dl

[options]
packages = fanbox_dl
install_requires =
    click
    requests

[options.entry_points]
console_scripts =
    fanbox-dl = fanbox_dl:main
